--- a/css/charles_reveal_dark.scss
+++ b/css/charles_reveal_dark.scss
@@ -1,10 +1,11 @@
----
----
-
 // This is Charles' default dark reveal theme.
+@use 'sass:color';
 
 // fonts and typography
-@import url('https://fonts.googleapis.com/css?family=Source+Sans+Pro&display=swap');
+// @import url('https://fonts.googleapis.com/css?family=Source+Sans+Pro&display=swap');
+// @use 'https://fonts.googleapis.com/css2?family=Source+Sans+3:ital,wght@0,200..900;1,200..900&display=swap';
+@import url("https://fonts.googleapis.com/css2?family=Source+Sans+3:ital,wght@0,200..900;1,200..900&display=swap");
+@import url("https://cdnjs.cloudflare.com/ajax/libs/inter-ui/4.1.0/inter.min.css");
 
 /* SCSS HEX */
 $charcoal: #264653ff;
@@ -82,8 +83,6 @@ $extensionColour: #9b59b6;
 	}
 }
 
-// @import "./reveal-box-slides.scss";
-@import url("https://cdnjs.cloudflare.com/ajax/libs/inter-ui/4.1.0/inter.min.css");
 
 // Dark mode activated.
 .reveal {
@@ -95,21 +94,14 @@ $extensionColour: #9b59b6;
 	background-color: $background-color;
 	color: $text-color;
   font-family: "Source Sans Pro", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
-	// font-family: "Inter UI", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
 	font-size: 50px; //2.0vw;
 }
 
 @supports (font-variation-settings: normal) {
 	  :root {
         font-family: "Source Sans Pro", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
-        //font-family: "Inter UI var alt", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
 	}
 }
-
-// a pretty ghetto attempt to make these slides show up ok on mobile screens in portrait layout
-//@media (max-aspect-ratio: 2/3) {
-//	:root { font-size: 3vh; }
-//}
 
 // the main reveal slides div
 // each slide will be in a standalone section
@@ -162,7 +154,7 @@ $extensionColour: #9b59b6;
 	// make headings on background image slides readable
     &[data-background-image] {
         h1,h2,p {
-            background-color: adjust-color($text-color, $alpha: -0.25);
+            background-color: color.adjust($text-color, $alpha: -0.25);
             color: $background-color;
             display: table;
             padding: 0.2em 0.4em;
@@ -171,7 +163,7 @@ $extensionColour: #9b59b6;
 
     &[data-background-image] {
         ul {
-	    background-color: adjust-color($text-color, $alpha: -0.25);
+	    background-color: color.adjust($text-color, $alpha: -0.25);
 	    color: $background-color;
 	    display: table;
 	}
@@ -263,8 +255,8 @@ $extensionColour: #9b59b6;
 	.image-credit {
 		  $creditOpacity: 0.5;
       $linkOpacity: 0.1;
-        background-color: adjust-color($text-color      , $alpha: -$creditOpacity);
-		    color: adjust-color($text-color, $alpha: -0.1);
+        background-color: color.adjust($text-color      , $alpha: -$creditOpacity);
+		    color: color.adjust($text-color, $alpha: -0.1);
 		    padding: 0.5em;
 		    margin: 0;
 		    font-size: 0.5em;
@@ -287,7 +279,7 @@ $extensionColour: #9b59b6;
 
 		    // links undecorated except on mouse-over
 		    a {
-			      color: adjust-color($link-color, $alpha: -$linkOpacity);
+			      color: color.adjust($link-color, $alpha: -$linkOpacity);
 			      &:hover{
 				        color: $link-color;
 			      }
