--- a/css/charles_reveal_dark.scss
+++ b/css/charles_reveal_dark.scss
@@ -106,19 +106,16 @@ $extensionColour: #9b59b6;
 // the main reveal slides div
 // each slide will be in a standalone section
 .reveal .slides section {
-	//width: 90vw;
-	//padding: 0 5vw;
-
 	// a bit of margin at the top
 	margin-top: 1rem;
-
-	// give everything room to breathe
-	&>* { margin-bottom: 1rem; }
 
 	// text
 	font-weight: 300;
 	line-height: 1.3;
 	text-align: left;
+
+	// give everything room to breathe
+	&>* { margin-bottom: 1rem; }
 
 	// inline emphasis
 	em { font-style: italic; }
@@ -207,7 +204,7 @@ $extensionColour: #9b59b6;
         color: #fafafa;
         font-weight: 900;
         strong { color: #f39c12; }
-		a { color: lighten($highlight-color, 30%); }
+		a { color: color.adjust($highlight-color, $lightness: 30%); }
     }
 
 	// source code display
@@ -216,17 +213,17 @@ $extensionColour: #9b59b6;
 		font-weight: 400;
 		padding: 0.2rem;
 		border-radius: 0.2rem;
-		color: darken($highlight-color, 10%);
-		background: linear-gradient(to right, lighten($highlight-color, 42%), lighten($highlight-color, 35%));
+		color: color.adjust($highlight-color, $lightness: -10%);
+		background: linear-gradient(to right, color.adjust($highlight-color, $lightness: 42%), color.adjust($highlight-color, $lightness: 35%));
 	}
 	a > code:hover {
 		color: $background-color;
-		background: linear-gradient(to right, darken($highlight-color, 20%), $highlight-color);
+		background: linear-gradient(to right, color.adjust($highlight-color, $lightness: -20%), $highlight-color);
 	}
 	pre > code {
 		color: $text-color;
 		border: none;
-		background: linear-gradient(to right, #282c34, lighten(#282c34, 10%));
+		background: linear-gradient(to right, #282c34, color.adjust(#282c34, $lightness: 10%));
 		// padding: 1em;
 		line-height: 1.2;
 	}
@@ -235,7 +232,7 @@ $extensionColour: #9b59b6;
     // from https://css-tricks.com/snippets/css/simple-and-nice-blockquote-styling/
     blockquote {
 		margin: 0;
-        background-color: darken($background-color, 8%);
+        background-color: color.adjust($background-color, $lightness: -8%);
         border-left: 10px solid #ccc;
         padding: 0.5em 0.5em;
         quotes: "\201C""\201D""\2018""\2019";
@@ -255,7 +252,7 @@ $extensionColour: #9b59b6;
 	.image-credit {
 		  $creditOpacity: 0.5;
       $linkOpacity: 0.1;
-        background-color: color.adjust($text-color      , $alpha: -$creditOpacity);
+        background-color: color.adjust($text-color, $alpha: -$creditOpacity);
 		    color: color.adjust($text-color, $alpha: -0.1);
 		    padding: 0.5em;
 		    margin: 0;
